--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ input, button, textarea {
     /* BORDERS */
     --BORDERS: 1px solid var(--BORDER-COLOR);
     --BORDER-RADIUS: 15px;
+    --BORDER-JOB-RADIUS: 5px;
 
     /* STANDARD PADDING */
     --PADDING-TOP-BOTTOM: 0.25em;
@@ -123,6 +124,11 @@ h2, h3 {
 
 p {
     line-height: 1.5;
+}
+
+.note {
+    color: var(--HIGHLIGHT-COLOR);
+    font-weight: bold;
 }
 
 a:any-link {
@@ -259,6 +265,7 @@ a:active {
 .contact__label {
     display: block;
     font-weight: bold;
+    margin-bottom: 0.4em;
 }
 
 .contact__input, .contact__textarea {
@@ -347,6 +354,33 @@ tfoot td {
     border-bottom-right-radius: var(--BORDER-RADIUS);
 }
 
+/* || Job Form */
+.job__input {
+    padding: 0.5em;
+    border-radius: var(--BORDER-JOB-RADIUS);
+    border-width: 2px;
+    width: 100%;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0;
+}
+
+.radios{
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+}
+
+input[type=radio]{
+    width: auto;
+    transform: scale(1.3);
+}
+
+
 @media screen and (min-width: 576px) {
     .header__h1::before {
         content: '🌮 ';
@@ -358,4 +392,6 @@ tfoot td {
     .menu__header, .menu__cr, .menu__sf, .menu__cs {
         font-size: 125%;
     }
+
+
 }
